<resources>
    <string name="app_name">My Smart Home</string>
    <string name="error_connection_timeout">Connection timeout</string>
    <string name="error_internet">Internet error has occurred</string>

    <string name="error_empty_first_name">First Name can not be empty</string>
    <string name="error_empty_last_name">Last Name can not be empty</string>
    <string name="error_empty_city">City can not be empty</string>
    <string name="error_empty_street">Street can not be empty</string>
    <string name="error_empty_street_code">Street Code can not be empty</string>
    <string name="error_empty_postal_code">Postal Code can not be empty</string>
    <string name="error_empty_country">Country can not be empty</string>

    <string name="user_data_has_been_updated">User data has been updated</string>
    <string name="all">All</string>
    <string name="light">Light</string>
    <string name="heater">Heater</string>
    <string name="roller_shutter">Roller shutter</string>
    <string name="smart_devices">Smart Devices</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="street">Street</string>
    <string name="street_code">Street Code</string>
    <string name="country">Country</string>
    <string name="birthday">Birthday</string>
    <string name="update">Update</string>
    <string name="device_name">Device Name</string>

    <string name="min_temperature">Min temp: %1$.1f °C</string>
    <string name="max_temperature">Max temp: %1$.1f °C</string>
    <string name="current_temperature">Current temp: %1$.1f °C</string>
    <string name="heater_device_data_updated">Heater device data has been updated</string>

    <string name="min_light_intensity">Min intensity: %1$d</string>
    <string name="max_light_intensity">Max intensity: %1$1d</string>
    <string name="current_light_intensity">Current light intensity: %1$d</string>
    <string name="light_device_data_updated">Light device data has been updated</string>

    <string name="min_roller_shutter_position">Min position: %1$d</string>
    <string name="max_roller_shutter_position">Max position: %1$d</string>
    <string name="current_roller_shutter_position">Current position: %1$d</string>
    <string name="roller_shutter_device_data_updated">Roller Shutter device data has been updated</string>

    <string name="mode">Mode</string>
    <string name="device_mode_on">ON</string>
    <string name="device_mode_off">OFF</string>
</resources>